--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   math_expressions: ^2.3.1
-  geolocator: ^13.0.1
   http: ^1.2.2
   flutter_spinkit: ^5.2.1
   bloc: ^8.1.4
@@ -47,6 +46,8 @@ dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.13
   intl: ^0.19.0
+  url_launcher: any
+  supabase_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
