--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   url_launcher: any
   supabase_flutter: ^2.0.0
   plant_icons: ^0.0.3
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
